--- a/fr/src/index.css
+++ b/fr/src/index.css
@@ -1,2 +1,7 @@
 @import "tailwindcss";
 @import "leaflet/dist/leaflet.css";
+
+/* Add Times New Roman font globally */
+body {
+  font-family: 'Times New Roman', Times, serif;
+}
